# clawdvault

./: .gitignore  Anchor.toml  Cargo.toml  LICENSE.md  PR-USD-PRICES.md  README.md
.github/workflows/: anchor.yml  deploy-preview.yml
app/: .env.example  package-lock.json  package.json  prisma.config.ts  tailwind.config.js  vercel.json
app/prisma/: schema.prisma
app/public/: SKILL.md  manifest.json  openapi.yaml  skill.md
app/scripts/: backfill-candles.ts  backfill-trades.ts  backfill-usd-prices.ts  backup-before-usd-migration.sh  check-all-trades.ts  check-data.ts  check-trades.ts  debug-prices.ts  deploy-usd-prices.sh  find-missing-trades.ts  fix-candles.ts  list-trades.ts  rebuild-candles.ts  reset-trades.ts  sync-reserves.ts
app/src/app/: globals.css  layout.tsx  page.tsx  providers.tsx
app/src/app/create/: page.tsx
app/src/components/: AgeGate.tsx  ChatAndTrades.tsx  ExplorerLink.tsx  Footer.tsx  Header.tsx  MockBanner.tsx  PriceChart.tsx  SolPriceDisplay.tsx  TokenChat.tsx  WalletButton.tsx
app/src/contexts/: WalletContext.tsx
app/src/hooks/: useSolPrice.ts
app/src/lib/: candles.ts  db.ts  jupiter.ts  moltx.ts  prisma.ts  raydium.ts  signRequest.ts  sol-price.ts  solana-client.ts  solana.ts  store.ts  supabase-client.ts  sync-trades.ts  types.ts
docs/: API.md  VERIFICATION.md
programs/clawdvault/: Cargo.toml
programs/clawdvault/src/: lib.rs
scripts/: deploy.sh  enable-realtime.sql  import-key.js  launch-clawdvault-token.ts  transfer-authority.ts
supabase/migrations/: 003_sol_price.sql  20260206_enable_realtime.sql
(+40 files in other folders)
