[package]
name = "clawdvault"
version = "0.1.0"
description = "Pump.fun-style token launchpad for AI agents"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "clawdvault"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.30.1"
anchor-spl = { version = "0.30.1", features = ["token", "associated_token"] }
