[package]
name = "clawdvault"
version = "0.1.0"
description = "Pump.fun-style token launchpad for AI agents"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "clawdvault"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = { version = "0.32.0", features = ["init-if-needed"] }
anchor-spl = { version = "0.32.0", features = ["token", "associated_token"] }

# Force pre-edition2024 versions
blake3.workspace = true
constant_time_eq.workspace = true
base64ct.workspace = true
